--- a/experimental-highlighter-elasticsearch-plugin/src/main/resources/plugin-metadata/plugin-descriptor.properties
+++ b/experimental-highlighter-elasticsearch-plugin/src/main/resources/plugin-metadata/plugin-descriptor.properties
@@ -1,6 +1,6 @@
 name=${elasticsearch.plugin.name}
 description=${project.description}
-version=${project.version}
+version=7.3.2
 classname=org.wikimedia.highlighter.experimental.elasticsearch.plugin.ExperimentalHighlighterPlugin
 java.version=${maven.compiler.target}
-elasticsearch.version=${elasticsearch.version}
+elasticsearch.version=7.3.2
